fix: adjust resources to work on native mode