@@ -11,7 +11,6 @@ import jakarta.inject.Inject;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Base64;
 
 @ApplicationScoped
@@ -39,7 +38,7 @@ public class QuteReportAdapter implements ReportGeneratorPort {
             Path outputPath = StorageUtils.getReportsPath().resolve(fileName);
             Files.writeString(outputPath, htmlContent);
 
-            System.out.println("[\u2713] Audit Report successfully generated at: " + outputPath.toAbsolutePath());
+            System.out.println("[SUCCESS] Audit Report successfully generated at: " + outputPath.toAbsolutePath());
         } catch (IOException e) {
             throw new RuntimeException("Error writing the HTML report to disk: " + e.getMessage(), e);
         }
@@ -47,12 +46,17 @@ public class QuteReportAdapter implements ReportGeneratorPort {
 
     private String getLogoBase64() {
         try {
-            Path path = Path.of("src/main/resources/META-INF/resources/redlab-logo.png");
-            byte[] imageBytes = Files.readAllBytes(path);
-            String base64Content = Base64.getEncoder().encodeToString(imageBytes);
-            return "data:image/png;base64," + base64Content;
+            try (var stream = getClass().getResourceAsStream("/META-INF/resources/redlab-logo.png")) {
+                if (stream == null) {
+                    System.err.println("[WARN] Could not load logo for Base64 injection: resource not found");
+                    return "";
+                }
+                byte[] imageBytes = stream.readAllBytes();
+                String base64Content = Base64.getEncoder().encodeToString(imageBytes);
+                return "data:image/png;base64," + base64Content;
+            }
         } catch (Exception e) {
-            System.err.println("[\u26A0] Warning: Could not load logo for Base64 injection: " + e.getMessage());
+            System.err.println("[WARN] Could not load logo for Base64 injection: " + e.getMessage());
             return "";
         }
     }
